--- a/hogwarts_legacy.html
+++ b/hogwarts_legacy.html
@@ -8,7 +8,7 @@
     <meta property="og:type"         content="website" />
     <meta property="og:title"        content="호그와트 레거시 클론 사이트" />
     <meta property="og:description"  content="호그와트 레거시 클론 사이트 입니다" />
-    <meta property="og:image"        content="../wallpapers/SL_WB_RainyHW_Wallpaper_01-2_AS1" />
+    <meta property="og:image"        content="./wallpapers/SL_WB_RainyHW_Wallpaper_01-2_AS1" />
 
     <meta property="twitter:card"          content="summary" />
     <meta property="twitter:site"          content="website" />
@@ -19,6 +19,7 @@
 
     <title>Document</title>
     <link rel="stylesheet" href="./css/hogwarts_legacy.css">
+    <script defer src="./js/hogwarts_legacy.js"></script>
 </head>
 <body>
     <header>
