--- a/legacy_media.html
+++ b/legacy_media.html
@@ -17,7 +17,7 @@
     <meta property="twitter:image"         content="../wallpapers/SL_WB_RainyHW_Wallpaper_01-2_AS1" />
     <meta property="twitter:url"           content="https://minwls.github.io/legacy_clone/" />
 
-    <title>레거시 클론 미디어</title>
+    <title>레거시 클론 - 미디어</title>
     <link rel="stylesheet" href="./css/legacy_media.css">
     <script defer src="./js/hogwarts_media.js"></script>
     <link rel="icon" type="image/png" href="../img/favicon-32x32.png" sizes="32x32" />
@@ -57,7 +57,7 @@
             <ul class="mm-menu">
                 <li><a href="hogwarts_legacy.html">홈</a></li>
                 <li><a href="legacy_media.html">미디어</a></li>
-                <li><a href="">커뮤니티</a></li>
+                <li><a href="legacy_commu.html">커뮤니티</a></li>
                 <li><a href="legacy_FAQ.html">FAQ</a></li>
                 <li><a href="">계속 우리와 함께해 주세요.</a></li>
                 <li><a href="">특별 보상을 잠금 해제 하세요</a></li>
@@ -93,7 +93,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 644.33 573.34"><g><rect width="644.33" height="573.34" style="opacity: 0;"></rect> <g><polygon points="517.2 455.29 235.98 130.57 235.98 452.83 228.48 452.83 228.48 110.45 522.87 450.38 517.2 455.29"></polygon> <polygon points="409.27 455.29 128.05 130.57 128.05 452.83 120.55 452.83 120.55 110.45 414.94 450.38 409.27 455.29"></polygon> <polygon points="336.4 359.69 336.4 456.58 420.31 456.58 336.4 359.69"></polygon> <circle cx="520.03" cy="452.83" r="13.96"></circle> <circle cx="124.3" cy="120.51" r="13.96"></circle></g></g></svg>
                         <span>FAQ ></span>
                     </a>
-                    <a href="">
+                    <a href="legacy_commu.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 644.33 573.34"><g><rect width="644.33" height="573.34" style="opacity: 0;"></rect> <g><path d="M524.27,428a3.75,3.75,0,0,1-3.75-3.75c0-56.05-54.06-107-99.4-139.8C376.34,252,331,230.31,322.17,226.22c-8.82,4.09-54.18,25.75-99,58.18-45.34,32.84-99.4,83.75-99.4,139.8a3.75,3.75,0,0,1-7.5,0c0-26.32,10.9-53.57,32.38-81,17-21.67,40.61-43.53,70.23-65,50.25-36.38,101.2-59.35,101.71-59.58l1.54-.69,1.53.69c.51.23,51.46,23.2,101.72,59.58,29.61,21.44,53.24,43.3,70.22,65,21.49,27.41,32.38,54.66,32.38,81A3.75,3.75,0,0,1,524.27,428Z"></path> <path d="M221.11,414.8l-1.53-.68c-.51-.23-51.46-23.2-101.72-59.58-29.62-21.44-53.24-43.3-70.22-65-21.49-27.42-32.38-54.66-32.38-81a3.75,3.75,0,1,1,7.5,0c0,56.08,54.11,107,99.5,139.87,44.78,32.41,90.05,54,98.85,58.11,8.82-4.1,54.17-25.75,98.95-58.18,45.35-32.84,99.41-83.75,99.41-139.8a3.75,3.75,0,0,1,7.5,0c0,26.32-10.9,53.56-32.38,81-17,21.67-40.61,43.53-70.23,65-50.25,36.38-101.2,59.35-101.71,59.58Z"></path> <path d="M423.22,414.8l-1.54-.68c-.5-.23-51.46-23.2-101.71-59.58-29.62-21.44-53.25-43.3-70.23-65-21.48-27.42-32.38-54.66-32.38-81a3.75,3.75,0,0,1,7.5,0c0,56,54.06,107,99.41,139.8,44.77,32.43,90.13,54.08,99,58.18,8.82-4.1,54.17-25.75,98.95-58.18,45.34-32.84,99.4-83.75,99.4-139.8a3.75,3.75,0,0,1,7.5,0c0,26.32-10.89,53.56-32.38,81-17,21.67-40.6,43.53-70.22,65-50.26,36.38-101.21,59.35-101.72,59.58Z"></path> <circle cx="322.17" cy="162.65" r="20.13"></circle> <circle cx="221.11" cy="420.76" r="10.07"></circle> <circle cx="19.01" cy="198.52" r="10.07"></circle> <circle cx="423.22" cy="420.76" r="10.07"></circle> <circle cx="625.32" cy="198.52" r="10.07"></circle></g></g></svg>
                         <span>커뮤니티 ></span>
                     </a>
